# ai-agent-test

./: .env  README.md  config.py  main.py  pyproject.toml
app/eckert_agent/agent/: a1.py  anggraph_ollama_simple.py  code_agent.py  langgraph_workflow.py  react_agent.py
app/eckert_agent/graph/: chat_graph.py
app/eckert_agent/memory/: chat_memory.py  knowledge_retriever.py  pg_checkpointer.py
app/eckert_agent/model/: ollama.py
app/eckert_agent/prompts/: PromptTemplateManager.py
app/eckert_agent/skills/test/: SKILL.md
app/eckert_agent/skills/test/assets/: api-design-checklist.md  rest-api-template.py
app/eckert_agent/skills/test/references/: graphql-schema-design.md  rest-best-practices.md
app/eckert_agent/skills/test/resources/: implementation-playbook.md
app/eckert_agent/skills/test_add/: __init__.py  a.md  add_tool.py  skill.md
app/eckert_agent/tool/: agent_tools.py
app/utils/: utils.py
test/: checkpiont_test.py  langgraph_agent_memory_test.py  test_agent_with_ollama.py  test_ollama.py
